--- a/trunk/NoodleRoulette/src/IntroPopup.mxml
+++ b/trunk/NoodleRoulette/src/IntroPopup.mxml
@@ -5,53 +5,44 @@
 	<mx:Script>
 		<![CDATA[
 			import mx.core.Application;
+			import mx.core.MovieClipAsset;
 			import mx.managers.PopUpManager;
 			function init() {
 				txtGameRule.htmlText =
-					"Bạn có biết game Motion tracking?<br />" +
-					"Bạn có muốn thử game này không?<br />" +
-					"Nếu có, bạn hãy đến với chương trình “Chế biến mì dai – Nhận ngay ipad” của nhãn hàng Mì 3 miền Gold để có cơ hội trải nghiệm game mới lạ, thú vị cũng như có cơ hội nhận những giải thưởng có giá trị.<br />" +
+					"Bạn có biết Motion Tracking? Bạn có muốn thử game này không?<br />" +
+					"<br />" +
+					"Nếu có, bạn hãy đến với chương trình “Chế biến mì dai – Nhận ngay ipad” của nhãn hàng Mì Reeva 3 miền Gold để có cơ hội trải nghiệm game mới lạ, thú vị cũng như có cơ hội nhận những giải thưởng có giá tri.<br />" +
 					"<b><u>I. Điều kiện tham gia:</u></b><br />" +
-					"<ul><li>Tất cả mọi người đang sinh sống, làm việc tại 6 thành phố lớn: thủ đô Hà Nội, thành phố Hải Phòng, Đà Nẵng, Nha Trang, Hồ Chí Minh, Cần Thơ.</li>" +
-					"<li>Bạn chỉ cần đăng kí chơi game để thuận tiện cho việc trao quà về sau khi thắng cuộc, người chơi chỉ cần điền đầy đủ thông tin sau:</li>" +
-					"<li>Họ tên:</li>" +
-					"<li>Năm sinh	 Điện thoại liên lạc:</li>" +
-					"<li>Địa chỉ:                Quận(huyện):                Tỉnh thành:</li>" +
-					"<li>Email:</li>" +
-					"<li>Tôi đã đọc và đồng ý với mọi điều khoản chương trình.</li>" +
-					"<li><b>Hoàn tất</b></li>" +
+					"<ul><li>	Tất cả mọi người đang sinh sống, làm việc tại 6 thành phố lớn: thủ đô Hà Nội, thành phố Hải Phòng, Đà Nẵng, Nha Trang, Hồ Chí Minh, Cần Thơ.</li>" +
 					"</ul><br />" +
-					"<b><u>II. Thời gian và nội dung chương trình:</u></b><br />" +
-					"Cuộc thi sẽ được diễn ra trong 2 vòng.<br />" +
+					"<b><u>II. Thời gian và nội dung chương trình:</u></b> Cuộc thi sẽ được diễn ra trong 2 vòng.<br />" +
 					"<ul>" +
 					"<li><b>Vòng thi ngày:</b> diễn ra hàng ngày từ 07/05/2012 – 03/06/2012</li>" +
 					"<li><b>Vòng thi tuần:</b> diễn ra vào cuối mỗi tuần (các ngày 13/05, 20/05, 27/05, 03/06)</li>" +
 					"<li><b>Vòng thi đặc biệt:</b> cuối chương trình : ngày 04/06/2012</li>" +
 					"<b>1. Vòng thi ngày:</b><br />" +
 					"<b>	Cách thức tham gia:</b><br />" +
-					"- Bước 1: Người tham gia sẽ đăng kí thông tin để chơi trò chơi.<br />" +
-					"- Bước 2: Người tham gia có thể lựa chọn 1 trong 2 hình thức chơi game như sau:<br />" +
+					"- Người tham gia lựa chọn 1 trong 2 hình thức chơi game như sau:<br />" +
 					"+ Chơi game bằng webcam:  dựa vào cử động của tay thông qua webcam.<br />" +
-					"+ Với các trường hợp người tham gia không có webcam thì có thể sử dụng các phím Arrow.<br />" +
-					"- Bước 3: Mỗi người tham gia sẽ có 1phút 30s cho phần chơi của mình. Sau khi kết thúc, số điểm của người tham gia sẽ được hiện lên “High Score” nằm bên phải màn hình. Đồng thời, Admin sẽ gửi email cho người tham gia thông báo số điểm đạt được.<br />" +
+					"  Người tham gia chơi bằng webcam thì điểm số sẽ được nhân đôi." +
+					"+ Chơi game bằng phím Arrow.<br />" +
+					"- Người tham gia sẽ có 60s cho phần chơi của mình.<br />" +
 					"<b>	Cách chấm điểm:</b><br />" +
-					"- Mỗi ngày, người tham gia sẽ được chơi game trong nhiều lần nhưng chỉ tính điểm 01 lần là điểm cao nhất trong ngày. Người tham gia được chơi nhiều lần trong các ngày khác và được tính điểm cao nhất.<br />" +
+					"- Mỗi ngày, người tham gia sẽ được chơi nhiều lần nhưng chỉ tính điểm 01 lần là điểm cao nhất trong ngày. <br />" +
 					"- Nếu lượt chơi trong ngày của người tham gia nằm trong Top 20 người có số điểm cao nhất thì người tham gia sẽ trở thành người thắng cuộc.<br />" +
-					"- Người thắng cuộc trong cuộc thi ngày thì vẫn có thể tiếp tục chơi để thi vòng thi đặc biệt nhưng không được tính cho cuộc thi ngày của các ngày khác dù số điểm của người chơi đó cao nhất trong các ngày khác.<br />" +
+					"- Người tham gia đã thắng vòng thi ngày, thì sẽ không được tính vào các vòng thi ngày khác.<br />" +
 					"<b>	Cơ cấu giải thưởng:</b><br />" +
-					"- Hàng ngày, sẽ có 20 giải thưởng giành cho 20 người chơi có điểm số cao nhất.<br />" +
-					"- Phần thưởng là 10 gói mì Reeva 3 miền Gold thơm ngon.<br />" +
+					"- 20 giải thưởng giành cho 20 người chơi có điểm số cao nhất.<br />" +
+					"- Phần thưởng: 10 gói mì Reeva 3 miền Gold thơm ngon.<br />" +
 					"<b>2. Vòng thi tuần:</b><br />" +
 					"<b>	Cách thức và nội dung thi:</b><br />" +
-					"- Tất cả người chơi đều được tham gia vào vòng thi này (bao gồm những người đã trúng giải thưởng ngày).<br />" +
-					"- Người tham gia có số điểm cao nhất (thông qua Highscore) trong 01 tuần (điểm của người chơi không được cộng dồn mà chỉ tính điểm cao nhất trong các lần chơi) thì người tham gia sẽ có cơ hội là người chiến thắng cuộc thi tuần<br />" +
+					"- Người tham gia có số điểm cao nhất trong 01 tuần (điểm của người chơi không được cộng dồn mà chỉ tính điểm cao nhất trong các lần chơi) thì sẽ có cơ hội là người chiến thắng.<br />" +
 					"<b>	Cơ cấu giải thưởng:</b><br />" +
-					"- Mỗi tuần sẽ có 10 giải thưởng giành cho 10 bạn có điểm số cao nhất<br />" +
-					"- Phần thưởng: 06 tháng ăn mì miễn phí tương đương với 04 thùng mì Reeva 3 miền Gold thơm ngon.<br />" +
+					"- 10 giải thưởng giành cho 10 bạn có điểm số cao nhất<br />" +
+					"- Phần thưởng: 06 tháng ăn mì tương đương 04 thùng mì Reeva 3 miền Gold thơm ngon.<br />" +
 					"<b>3. Vòng thi đặc biệt:</b><br />" +
 					"<b>	Cách thức và nội dung thi:</b><br />" +
-					"- Tất cả người chơi đều được tham gia vào vòng thi này (bao gồm những người đã trúng giải thưởng ngày).<br />" +
-					"- Người tham gia có điểm tích lũy hàng ngày cao nhất (thông qua Highscore) trong suốt thời gian diễn ra chương trình (điểm của người chơi không được cộng dồn mà chỉ tính điểm cao nhất trong các lần chơi) thì người tham gia sẽ có cơ hội là người thắng cuộc vòng thi đặc biệt<br />" +
+					"- Người tham gia có số điểm cao nhất trong suốt thời gian diễn ra chương trình (điểm của người chơi không được cộng dồn mà chỉ tính điểm cao nhất trong các lần chơi) thì người tham gia sẽ có cơ hội là người thắng cuộc.<br />" +
 					"<b>	Cơ cấu giải thưởng:</b><br />" +
 					"-  01 Apple  IPad 3 – 64 GB trị giá 16.000.000 VNĐ<br />" +
 					"<b><u>III. Thời gian kết thúc tính đềm – Thời gian công bố kết quả:</u></b><br />" +
@@ -62,10 +53,18 @@
 					"<b>2. Thời gian công bố kết quả:</b><br />" +
 					"- 9h sáng ngày hôm sau (sau ngày kết thúc tính điểm)<br />" +
 					"<b><u>IV. Hình thức trao giải thưởng:</u></b><br />" +
-					"- Các phần quà sẽ được gửi đến người tham gia thông qua bưu điện theo địa chỉ và số điện thoại cung cấp tại mẫu đơn tham gia trong thời gian sớm nhất.<br />" +
+					"- Các phần quà sẽ được gửi đến người tham gia thông qua bưu điện theo địa chỉ và số điện thoại cung cấp tại mẫu đơn tham gia trong thời gian sớm nhất. <br />" +
 					"- Lưu ý, mỗi người chơi chỉ nhận được quà 1 lần theo địa chỉ đã cung cấp trong mẫu đơn tham gia cho vòng thi ngày nhưng được sử dụng cho các vòng thi khác.<br />" +
 					"<b><em>* Quyết định của Ban Tổ Chức sẽ là quyết định cuối cùng.</em></b>";
 			}
+			
+			[Embed(source="assets/Guide1.swf")]
+			[Bindable]
+			private var guide1ImgCls:Class;
+			
+			[Embed(source="assets/Guide2.swf")]
+			[Bindable]
+			private var guide2ImgCls:Class;
 			
 			function gameRuleClicked() {
 				makeAllInactive();
@@ -77,6 +76,24 @@
 				makeAllInactive();
 				howToPlay.styleName = "howToPlayActive";
 				canvasHowToPlay.visible = true;
+				
+				guide.source = new guide1ImgCls() as MovieClipAsset;
+				var timer:Timer = new Timer(8500);
+				timer.addEventListener(TimerEvent.TIMER,
+					function(event:Event) {
+						guide.source = new guide2ImgCls() as MovieClipAsset;
+						var timer2:Timer = new Timer(6500);
+						timer2.addEventListener(TimerEvent.TIMER,
+							function(event:Event) {
+								guide.visible = false;
+								optMotion.visible = true;
+								optKey.visible = true;
+							}
+						);
+						timer2.start();
+					}
+				);
+				timer.start();
 			}
 			function hightscoreListLinkClicked() {
 				navigateToURL( new URLRequest( "http://viethungfood.com/" ), "_blank" );
@@ -135,18 +152,19 @@
 				 paddingLeft="20" paddingBottom="20" paddingRight="20" paddingTop="20" fontStyle="normal" backgroundAlpha="1.0" alpha="1.0" wordWrap="true"/>
 	<mx:Canvas id="canvasHowToPlay" width="550" height="290" x="90" y="80" visible="false" 
 			   verticalScrollPolicy="off" horizontalScrollPolicy="off">
+		<mx:Image id="guide" width="520" height="260" x="35" y="10" minWidth="520" minHeight="260" />
 		<mx:Image id="optMotion" source="@Embed(source='assets/opt_motion.png')"
 				  mouseOver="{glowImage.play([optMotion])}"
 				  mouseOut="{unglowImage.play([optMotion])}"
 				  useHandCursor="true"
 				  buttonMode="true"
-				  click="selectWebcam()"/>
+				  click="selectWebcam()" visible="false"/>
 		<mx:Image id="optKey" source="@Embed(source='assets/opt_keys.png')" x="400" y="140" 
 				  mouseOver="{glowImage.play([optKey])}"
 				  mouseOut="{unglowImage.play([optKey])}"
 				  useHandCursor="true"
 				  buttonMode="true"
-				  click="selectKeyboard()"/>
+				  click="selectKeyboard()" visible="false"/>
 	</mx:Canvas>
 	<mx:Glow id="glowImage" duration="200"
 			 alphaFrom="1.0" alphaTo="0.3"
